Overflow bug fixed
x overflow set as hidden in the mobile configurations

--- a/nicepage.css
+++ b/nicepage.css
@@ -1,9 +1,4 @@
-/*!
- * froala_editor v3.2.3 (https://www.froala.com/wysiwyg-editor)
- * License https://froala.com/wysiwyg-editor/terms/
- * Copyright 2014-2020 Froala Labs
- */
-
+ 
 .fr-clearfix::after {
   clear: both;
   display: block;
@@ -3992,7 +3987,9 @@ html {
   -webkit-text-size-adjust: 100%;
 }
 body {
-  margin: 0;
+  margin: auto;
+  width: 100%;
+  overflow-x:hidden;
 }
 article,
 aside,
